ingress-benchmark/cilium-gw-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: google-dns
    external-dns.alpha.kubernetes.io/hostname: httpbin.localhost.pomerium.io
    ingress.pomerium.io/allow_any_authenticated_user: 'true'
    ingress.pomerium.io/pass_identity_headers: 'true'
  name: httpbin
  namespace: httpbin
spec:
  ingressClassName: pomerium
  rules:
    - host: httpbin.localhost.pomerium.io
      http:
        paths:
          - backend:
              service:
                name: httpbin
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - httpbin.ingress.localhost.pomerium.io
      secretName: httpbin-localhost-pomerium-io
